--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="./pages/tienda.html">tienda</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/reclamosdudas.html">Reclamos-Dudas</a>
+                </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -50,17 +53,13 @@
                             <li><a class="dropdown-item" href="./pages/hardware.html">Hardware</a></li>
                             <li><a class="dropdown-item" href="./pages/sillasgamer.html">Sillas gamer</a></li>
                             <li><a class="dropdown-item" href="./pages/monitores.html">Monitores</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="./pages/reclamos-dudas.html">Reclamos-Dudas</a></li>
                         </ul>
                     </li>
                 </ul>
                 <div><a href="./pages/carritocompra.html"><img src="./img/carrito de compra.png" alt="carrito de compra" class="carrito"></a></div>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn " type="submit">Buscar</button>
+                    <button class="btn " type="submit"><img src="./img/lupa.png" alt="lupa" class="lupa"></button>
                 </form>
             </div>
         </div>
@@ -157,7 +156,7 @@
             <a href="./pages/privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
         </div>
         <div class="mb-2">
-            <a href="./reclamos-dudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
+            <a href="./pages/reclamos-dudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
         </div>
     </div>
     <div class="col-xs-12 col-md-6 col-lg-3">
