--- a/pages/monitores.html
+++ b/pages/monitores.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/tienda.html">tienda</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -50,10 +53,6 @@
                             <li><a class="dropdown-item" href="../pages/hardware.html">Hardware</a></li>
                             <li><a class="dropdown-item" href="../pages/sillasgamer.html">Sillas gamer</a></li>
                             <li><a class="dropdown-item" href="../pages/monitores.html">Monitores</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="../pages/reclamosdudas.html">Reclamos-Dudas</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -106,9 +105,9 @@
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
-        <img src="../img/monitor4.jfif" class="card-img-top" alt="monitor">
+        <img src="../img/monitor6.png" class="card-img-top" alt="monitor">
         <div class="card-body">
-            <h5 class="card-title">Monitor</h5>
+            <h5 class="card-title">Monitor gamer</h5>
             <p class="card-text"></p>
             <a href="#" class="btn btn-primary">COMPRAR</a>
         </div>
