--- a/pages/reclamosdudas.html
+++ b/pages/reclamosdudas.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/tienda.html">tienda</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -51,14 +54,10 @@
                             <li><a class="dropdown-item" href="../pages/hardware.html">Hardware</a></li>
                             <li><a class="dropdown-item" href="../pages/sillasgamer.html">Sillas gamer</a></li>
                             <li><a class="dropdown-item" href="../pages/monitores.html">Monitores</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="../pages/reclamosdudas.html">Reclamos-Dudas</a></li>
                         </ul>
                     </li>
                 </ul>
-                <div><a href="./pages/carritocompra.html"><img src="../img/carrito de compra.png" alt="carrito de compra" class="carrito"></a></div>
+                <div><a href="./carritocompra.html"><img src="../img/carrito de compra.png" alt="carrito de compra" class="carrito"></a></div>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                     <button class="btn " type="submit">Buscar</button>
