--- a/pages/carritocompra.html
+++ b/pages/carritocompra.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <!-- keywords -->
-        <meta name="keywords" content="pc, teclado, gamer, mouse">
+        <meta name="keywords" content="">
     <!-- description -->
-    <meta name="description" content="La mayor variedad de componentes y al mejor precio los encontrás sólo en La Dimarcada.">
+    <meta name="description" content="">
     <link rel="stylesheet" href="../css/style.css">
     <title>Carrito</title>
 </head>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg fondoheaderandfooter">
         <div class="container-fluid">
             <a href="./index.html">
-            <img src="./img/logo-compragamer.png.opdownload" alt="logo">
+            <img src="./img/" alt="logo">
         </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -35,29 +35,28 @@
                         <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                      <a class="nav-link" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./pages/tienda.html">tienda</a>
+                      <a class="nav-link" href="./tienda.html">tienda</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
+                </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Productos
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./pages/perifericos.html">Perifericos</a></li>
-                            <li><a class="dropdown-item" href="./pages/hardware.html">Hardware</a></li>
-                            <li><a class="dropdown-item" href="./pages/sillasgamer.html">Sillas gamer</a></li>
-                            <li><a class="dropdown-item" href="./pages/monitores.html">Monitores</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="./pages/reclamos-dudas.html">Reclamos-Dudas</a></li>
+                            <li><a class="dropdown-item" href="./perifericos.html">Perifericos</a></li>
+                            <li><a class="dropdown-item" href="./hardware.html">Hardware</a></li>
+                            <li><a class="dropdown-item" href="./sillasgamer.html">Sillas gamer</a></li>
+                            <li><a class="dropdown-item" href="./monitores.html">Monitores</a></li>
                         </ul>
                     </li>
                 </ul>
-                <div><a href="./carritocompra.html"><img src="./img/carrito de compra.png" alt="carrito de compra" class="carrito"></a></div>
+                <div><a href="./carritocompra.html"><img src="../img/carrito de compra.png" alt="carrito de compra" class="carrito"></a></div>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                     <button class="btn " type="submit">Buscar</button>
@@ -66,7 +65,7 @@
         </div>
     </nav>
 <!-- main -->
-
+<h1>Proximamente</h1>
     <!-- footer -->
 <footer>
     <div class="container-fluid">
