--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/tienda.html">tienda</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -50,10 +53,6 @@
                             <li><a class="dropdown-item" href="../pages/hardware.html">Hardware</a></li>
                             <li><a class="dropdown-item" href="../pages/sillasgamer.html">Sillas gamer</a></li>
                             <li><a class="dropdown-item" href="../pages/monitores.html">Monitores</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="../pages/reclamosdudas.html">Reclamos-Dudas</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -90,7 +89,7 @@
 <h1><strong>Hardware</strong></h1>
 <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
     <div class="card cardimg colorcard" style="width: 18rem;">
-        <img src="../img/discoduro1.png.crdownload" class="card-img-top" alt="discoduro">
+        <img src="../img/Disco_duro.png.crdownload" class="card-img-top" alt="discoduro">
         <div class="card-body">
             <h5 class="card-title">Disco duro seagate</h5>
             <p class="card-text">disco duro de 1TB</p>
