--- a/pages/perifericos.html
+++ b/pages/perifericos.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/tienda.html">tienda</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -50,10 +53,6 @@
                             <li><a class="dropdown-item" href="../pages/hardware.html">Hardware</a></li>
                             <li><a class="dropdown-item" href="../pages/sillasgamer.html">Sillas gamer</a></li>
                             <li><a class="dropdown-item" href="../pages/monitores.html">Monitores</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="../pages/reclamosdudas.html">Reclamos-Dudas</a></li>
                         </ul>
                     </li>
                 </ul>
