--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -41,6 +41,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/tienda.html">tienda</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -51,10 +54,6 @@
                                 <li><a class="dropdown-item" href="../pages/hardware.html">Hardware</a></li>
                                 <li><a class="dropdown-item" href="../pages/sillasgamer.html">Sillas gamer</a></li>
                                 <li><a class="dropdown-item" href="../pages/monitores.html">Monitores</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="../pages/reclamosdudas.html">Reclamos-Dudas</a></li>
                             </ul>
                         </li>
                     </ul>
