--- a/pages/carritocompra.html
+++ b/pages/carritocompra.html
@@ -21,7 +21,7 @@
     <div class="header">
     <nav class="navbar navbar-expand-lg fondoheaderandfooter">
         <div class="container-fluid">
-            <a href="./index.html">
+            <a href="../index.html">
             <img src="./img/" alt="logo">
         </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
