--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/tienda.html">tienda</a>
+                            <a class="nav-link" href="../pages/tienda.html">Tienda</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
@@ -90,29 +90,23 @@
     <!-- main -->
     <main class="mainnosotros">
     <h1><strong> Sobre nosotros</strong></h1>
-    <p class="sobrenosotros">Nos fundamos en el 2003,estamos ubicados en <span> Av. Dr. Honorio Pueyrredón 1841</span>,
-        Buenos Aires,<span> nuestros horarios son
-            de 08:00AM hasta las 18:00PM los dias de semana,y los fin de semanas cerrado </span>, no contamos un local
-        fisico, es decir,
-        contamos con un almacen fisico para guardar las cosas pero al que no pueden ir a comprar, las compras son solo
-        via
-        internet. Desde ya, muchas gracias por su confianza.</p>
+    <p class="sobrenosotros">Nos fundamos en el 2003,estamos ubicados en <span> Av. Dr. Honorio Pueyrredón 1841</span>,Buenos Aires,<span> nuestros horarios son de 08:00AM hasta las 18:00PM los dias de semana,y los fin de semanas cerrado </span>, no contamos un local fisico, es decir, contamos con un almacen fisico para guardar las cosas pero al que no pueden ir a comprar, las compras son solo via internet. Desde ya, muchas gracias por su confianza.</p>
 
 
 <div class="text-center">
     <h2>Nuestra ubicacion:</h2>
 
     
-        <div class="card colorcard col-md-12 col-lg-12 col-xl-12 ubicolortamanio" style="width: 25rem;">
+        <div class="card colorcard col-md-12 col-lg-12 col-xl-12 ubicolortamanio text-center" style="width: 25rem;">
             <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52546.39797397851!2d-58.521218441796876!3d-34.6003715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb1a733cb37d%3A0x7e712bd23c7ce4ba!2sCOMPRA%20GAMER!5e0!3m2!1ses-419!2sar!4v1659507165607!5m2!1ses-419!2sar"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade" class="ubicacion card-img-top"></iframe>
             <div class="card-body">
-              <p class="card-text text-center ubicacion">Nuestra ubicacion GPS.</p>
+              <p class="card-text text-center ubicacion">Nuestra ubicacion GPS. </p>
             </div>
           </div>
-
+        
 
     <h2>Fotos de nuestro almacen</h2>
 
