--- a/pages/privacidad-politica.html
+++ b/pages/privacidad-politica.html
@@ -18,18 +18,22 @@
 
 <body>
     <!-- header -->
-    <header>
+    <header class="headerlegal">
         <a href="../index.html">
             <img src="./img/" alt="logo">
         </a>
         <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
             <li><a href="./terminos-condiciones.html">Terminos y condiciones</a></li>
+        </ul>
         </nav>
     </header>
     <!-- main -->
-    <main>
+    <main class="mainlegal">
         <h1><strong>Privacidad y politica</strong></h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore eveniet fuga, architecto provident
+        <div class="plegal">
+        <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore eveniet fuga, architecto provident
             perspiciatis quia impedit doloremque aliquid tenetur quibusdam. Distinctio iste earum eligendi facere minus
             commodi error voluptate, fuga officia quasi dolores fugiat totam! Ratione ut optio quis! Corrupti sapiente
             voluptates quod amet tempora voluptatem tempore, repudiandae provident quis architecto ex inventore deserunt
@@ -48,6 +52,7 @@
             alias rem eveniet eaque veritatis fugiat exercitationem magni soluta ad, laudantium dicta facilis
             consequuntur odit aut, cum impedit. Non provident similique rerum ratione ducimus obcaecati explicabo rem
             quod officiis maiores.</p>
+        </div>
         <!-- footer -->
         <footer>
             <div class="container-fluid">
@@ -64,7 +69,7 @@
                         <a href="./privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
                     </div>
                     <div class="mb-2">
-                        <a href="./reclamos-dudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
+                        <a href="./reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
