--- a/pages/terminos-condiciones.html
+++ b/pages/terminos-condiciones.html
@@ -18,18 +18,22 @@
 
 <body>
     <!-- header -->
-    <header>
+    <header class="headerlegal">
         <a href="../index.html">
             <img src="./img/" alt="logo">
         </a>
         <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
             <li><a href="./privacidad-politica.html">Privacidad Y Politica</a></li>
+        </ul>
         </nav>
     </header>
     <!-- main -->
-    <main>
+    <main class="mainlegal">
         <h1><strong>Terminos y condiciones</strong></h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa aut magni amet vitae totam, quos repudiandae
+        <div class="plegal">
+        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa aut magni amet vitae totam, quos repudiandae
             natus doloribus excepturi cupiditate itaque earum velit iusto! Aut explicabo reiciendis recusandae officia
             quo dolores a pariatur, temporibus, accusamus ex, quis repudiandae! Ipsam, saepe? A amet voluptate
             perspiciatis ut, pariatur cum est veritatis odit quibusdam atque iusto, excepturi dolore quos ducimus
@@ -47,6 +51,7 @@
             maiores iste adipisci in eos consequuntur consectetur. Sed sequi ipsam sunt, animi, magni nam possimus
             eveniet rerum distinctio sit temporibus voluptatem quas rem. Enim, eligendi odit? Itaque voluptate dicta
             aspernatur omnis quo deserunt et accusantium non?</p>
+        </div>
         <!-- footer -->
         <footer>
             <div class="container-fluid">
@@ -63,7 +68,7 @@
                         <a href="./privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
                     </div>
                     <div class="mb-2">
-                        <a href="./reclamos-dudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
+                        <a href="./reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
