--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                       <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./pages/tienda.html">tienda</a>
+                      <a class="nav-link" href="./pages/tienda.html">Tienda</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./pages/reclamosdudas.html">Reclamos-Dudas</a>
