--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/tienda.html">tienda</a>
+                            <a class="nav-link" href="../pages/tienda.html">Tienda</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
