--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
     <!-- description -->
     <meta name="description" content="La mayor variedad de componentes y al mejor precio los encontrás sólo en La Dimarcada.">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/ladimarcada.png">
     <title>LaDimarcada</title>
 </head>
 <body>
 <!-- header -->
 <header>
     <!-- nav -->
+    
     <div class="header">
     <nav class="navbar navbar-expand-lg fondoheaderandfooter">
-        <div class="container-fluid">
+        <div class="container-fluid ">
             <a href="./index.html">
-            <img src="./img/logo-compragamer.png.opdownload" alt="logo">
+            <img src="./img/ladimarcada.png" alt="logo" class="logo">
         </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -138,10 +140,12 @@
         </div>
       </div>
     </div>
+    
 </main>
 
 <!-- footer -->
 <footer>
+  <button><img src="./img/wsp.png" alt="wsp" class="wsp"></button>
 <div class="container-fluid">
 <div class="row p-5  text-white fondoheaderandfooter">
     <div class="col-xs-12 col-md-6 col-lg-3">
