--- a/pages/carritocompra.html
+++ b/pages/carritocompra.html
@@ -8,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <!-- keywords -->
-        <meta name="keywords" content="">
+        <meta name="keywords" content="comprar, pagar, carrito">
     <!-- description -->
-    <meta name="description" content="">
+    <meta name="description" content="finalice su compra">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../img/ladimarcada.png">
     <title>Carrito</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
     <nav class="navbar navbar-expand-lg fondoheaderandfooter">
         <div class="container-fluid">
             <a href="../index.html">
-            <img src="./img/" alt="logo">
+            <img src="../img/ladimarcada.png" alt="logo" class="logo">
         </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -59,7 +60,7 @@
                 <div><a href="./carritocompra.html"><img src="../img/carrito de compra.png" alt="carrito de compra" class="carrito"></a></div>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn " type="submit">Buscar</button>
+                    <button class="btn " type="submit"><img src="../img/lupa.png" alt="lupa" class="lupa"></button>
                 </form>
             </div>
         </div>
