--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,6 +13,7 @@
     <!-- description -->
     <meta name="description" content="Todo lo que queres saber de nosotros">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../img/ladimarcada.png">
     <title>Nosotros</title>
 </head>
 
@@ -23,7 +24,7 @@
         <nav class="navbar navbar-expand-lg fondoheaderandfooter">
             <div class="container-fluid">
                 <a href="../index.html">
-                    <img src="../img/logo-compragamer.png.opdownload" alt="logo">
+                    <img src="../img/ladimarcada.png" alt="logo" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -60,7 +61,7 @@
                     <div><a href="./carritocompra.html"><img src="../img/carrito de compra.png" alt="carrito de compra" class="carrito"></a></div>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                        <button class="btn " type="submit">Buscar</button>
+                        <button class="btn " type="submit"><img src="../img/lupa.png" alt="lupa" class="lupa"></button>
                     </form>
                 </div>
             </div>
