--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 <!-- footer -->
 <footer>
-  <button><img src="./img/wsp.png" alt="wsp" class="wsp"></button>
+  <a href="#"><img src="./img/wsp.png" alt="wsp" class="wsp"></a>
 <div class="container-fluid">
 <div class="row p-5  text-white fondoheaderandfooter">
     <div class="col-xs-12 col-md-6 col-lg-3">
