--- a/pages/carritocompra.html
+++ b/pages/carritocompra.html
@@ -66,9 +66,19 @@
         </div>
     </nav>
 <!-- main -->
-<h1>Proximamente</h1>
+<main class="maincarrito">
+<div class="proximamenteimg text-center">
+    
+    <a href="../index.html">
+<img src="../img/PROXIMAMENTE-01.png" alt="proximamente" class="text-center">
+</a>
+</div>
+<h1 class="h1carrito text-center">Esperanos, vas a ver que te conviene</h1>
+
+</main>
     <!-- footer -->
 <footer>
+    <a href="#"><img src="../img/wsp.png" alt="wsp" class="wsp"></a>
     <div class="container-fluid">
     <div class="row p-5  text-white fondoheaderandfooter">
         <div class="col-xs-12 col-md-6 col-lg-3">
