--- a/pages/privacidad-politica.html
+++ b/pages/privacidad-politica.html
@@ -54,7 +54,7 @@
             consequuntur odit aut, cum impedit. Non provident similique rerum ratione ducimus obcaecati explicabo rem
             quod officiis maiores.</p>
         </div>
-        
+        <a href="#"><img src="../img/wsp.png" alt="wsp" class="wsp"></a>
             <!-- JavaScript Bundle with Popper -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
