--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <a href="./pages/privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
         </div>
         <div class="mb-2">
-            <a href="./pages/reclamos-dudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
+            <a href="./pages/reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
         </div>
     </div>
     <div class="col-xs-12 col-md-6 col-lg-3">
