--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -90,27 +90,29 @@
 <h1><strong>Hardware</strong></h1>
 <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
     <div class="card cardimg colorcard" style="width: 18rem;">
-        <img src="../img/Disco_duro.png.crdownload" class="card-img-top" alt="discoduro">
+        <img src="../img/discoduro1.png" class="card-img-top" alt="discoduro">
         <div class="card-body">
             <h5 class="card-title">Disco duro seagate</h5>
-            <p class="card-text">disco duro de 1TB</p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Rendimiento excepcional que ofrece velocidades de lectura de hasta 535 MB/s y de escritura de 515 MB/s.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/placa madre1.png" class="card-img-top " alt="placamadre">
         <div class="card-body">
             <h5 class="card-title">Placa madre ASUS</h5>
-            <p class="card-text">4 slots para memoria ram</p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Circuito integrado de tarjeta madre: Intel® H81.
+                Memoria máxima de adaptador de gráficos: 1024 MB.
+                Fabricante de procesador: Intel.ram</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/ram.jpg" class="card-img-top" alt="ram">
         <div class="card-body">
             <h5 class="card-title">Ram Crucial</h5>
-            <p class="card-text">Ram de 8 gb 2400mhz ddr4</p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Mejora la capacidad de respuesta de tu sistema, ejecuta aplicaciones más rápido y realiza múltiples tareas con facilidad</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
 </div>
@@ -119,24 +121,30 @@
         <img src="../img/ssd.png" class="card-img-top" alt="ssd">
         <div class="card-body">
             <h5 class="card-title">SSD Kingston</h5>
-            <p class="card-text">ssd de 480GB</p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Capacidad: 480 GB.
+                Interface SATA III 6Gb/s.
+                10 veces más rápida que los discos duros tradicionales.
+                Ideal para equipos de escritorio y portátiles.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/procesador1.png" class="card-img-top " alt="procesador">
         <div class="card-body">
             <h5 class="card-title">Amd ryzen 5 5600g</h5>
-            <p class="card-text">N de nucleos:6-N de subprocesos:12</p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">AMD Configurable TDP (cTDP): 45-65W
+                TDP/TDP predeterminado: 65W
+                Processor Technology for CPU Cores: TSMC</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/placavideoaorus.png" class="card-img-top" alt="placavideo">
         <div class="card-body">
             <h5 class="card-title">placa de video Aorus 2070 RTX</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Resolución máxima digital: 7680 x 4320. Factor de forma: ATX
+                Multiprocesadores de transmisión NVIDIA Ampere</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
 </div>
@@ -163,7 +171,7 @@
                 <a href="#" class=" text-decoration-none text-secondary">privacidad y politica</a>
             </div>
             <div class="mb-2">
-                <a href="./reclamos-dudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
+                <a href="./reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-3">
