--- a/pages/monitores.html
+++ b/pages/monitores.html
@@ -93,24 +93,30 @@
         <img src="../img/monitor.png" class="card-img-top" alt="monitor">
         <div class="card-body">
             <h5 class="card-title">Monitor</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Tamaño de pantalla (clase) 24.
+                Plana/Curva Plano.
+                Tamaño de pantalla activa (HxV) (mm) 527.04 x 296.46.
+                Relación de aspecto 16:9.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/monitor3.webp" class="card-img-top " alt="monitor">
         <div class="card-body">
             <h5 class="card-title">Monitor</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Tamaño de pantalla 18.5 Tipo de panel TN.
+                Relación de aspecto 16:9 Resolución 1366 x 768.
+                Brillo (cd/m2) 200cd/m2 Relación de contraste 5,000,000:1(LED)</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/monitor6.png" class="card-img-top" alt="monitor">
         <div class="card-body">
             <h5 class="card-title">Monitor gamer</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Vista fascinante en OLED con el procesador Neo Quantum.
+                Tiempo de respuesta de 0,1 ms y frecuencia de actualización de 175 Hz para un juego fluido.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
 </div>
@@ -119,24 +125,33 @@
         <img src="../img/monitoraorus.webp" class="card-img-top" alt="monitor">
         <div class="card-body">
             <h5 class="card-title">Monitor gamer</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Panel Size (diagonal) 27"
+                Display Viewing Area (HxV) 596.736 x 335.664 (mm)
+                Panel Backlight/ Type. ELED / VA.
+                Display Surface(non-glare/ glare) Non-glare</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/monitorredragon.png" class="card-img-top " alt="monitor">
         <div class="card-body">
             <h5 class="card-title">Monitor gamer</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Tamaño de pantalla del panel: 27" LED.
+                Tipo de panel: Plano Slim IPS.
+                Brillo: 250 cd/m2.Contraste: 1000 : 1.
+                Distancia del pixel: 0.3114mm*0.3114mm.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/monitor5.png_515Wx515H" class="card-img-top" alt="monitor">
         <div class="card-body">
             <h5 class="card-title">Monitor gamer</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Corsair XENEON 32QHD165
+                tipo de panel	IPS LED de 32 pulgadas
+                resolución	QHD (2.560 x 1.440 píxeles)
+                TASA DE REFRESCO	165 Hz 1 ms MPRT</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
 </div>
@@ -163,7 +178,7 @@
                 <a href="./privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
             </div>
             <div class="mb-2">
-                <a href="./reclamos-dudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
+                <a href="./reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-3">
