--- a/pages/perifericos.html
+++ b/pages/perifericos.html
@@ -93,24 +93,26 @@
         <img src="../img/joystick.webp" class="card-img-top" alt="joystick">
         <div class="card-body">
             <h5 class="card-title">joystick PS5</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Batería recargable; alimentación USB-C.
+                Sustitución del botón Share por un nuevo botón Create.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/soporte.png" class="card-img-top " alt="soportedeauris">
         <div class="card-body">
             <h5 class="card-title">Soporte de auriculares</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Construcción de aluminio durable y diseño icónico, se combinan para crear definitivo de la visualización
+                Iluminación RGB</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/mouse pad hyperx.png" class="card-img-top" alt="mousepad">
         <div class="card-body">
             <h5 class="card-title">Mouse-pad hyperx</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Bordes: con costura uniforme antidesgaste.Grosor: 3-4 mm. Material: Tela, caucho. Tamaños: M, L, XL.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
 </div>
@@ -119,24 +121,34 @@
         <img src="../img/teclado.png" class="card-img-top" alt="teclado">
         <div class="card-body">
             <h5 class="card-title">Teclado logitech</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Altura: 218 mm
+                Anchura: 452 mm
+                Profundidad: 33 mm
+                Peso: 1000 g
+                Tipo de conexión: USB 2.0
+                Protocolo USB: USB 2.0
+                Velocidad USB: Máxima</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/mouse.png" class="card-img-top " alt="Mouse">
         <div class="card-body">
             <h5 class="card-title">Mouse logitech</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Mouse (alto x ancho x profundidad): 97,7 mmx 61,5 mm x 35,2 mm. Peso del mouse: 70,5 g</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/auriculares.png" class="card-img-top" alt="auriculares">
         <div class="card-body">
             <h5 class="card-title">auriculares logitech</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Transductor: Malla híbrida PRO-G de 50 mm.
+                Imán: Neodimio.
+                Respuesta de frecuencia: 20Hz-20KHz.
+                Impedancia: 35 ohmios.
+                </p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
 </div>
