--- a/pages/sillasgamer.html
+++ b/pages/sillasgamer.html
@@ -93,24 +93,26 @@
         <img src="../img/silla.png" class="card-img-top" alt="silla">
         <div class="card-body">
             <h5 class="card-title">Silla gamer</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Asiento ajustable en altura y ángulo, relleno de esponja sintética de máxima calidad, que no se deforma con el paso del tiempo.
+                Estructura de acero para garantizar su máxima durabilidad.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/silla-de-escritorio-monet.png" class="card-img-top " alt="silla">
         <div class="card-body">
             <h5 class="card-title">Silla </h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Un sillón diferente e ideal no solo para usar en oficinas sino también en tu hogar. Íntegramente construido en acero.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/sillaaorus.png" class="card-img-top" alt="silla">
         <div class="card-body">
-            <h5 class="card-title">Silla gamer</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <h5 class="card-title">Silla Gamer</h5>
+            <p class="card-text">Asiento ajustable en altura y ángulo, relleno de esponja sintética de máxima calidad, que no se deforma con el paso del tiempo.
+                Estructura de acero para garantizar su máxima durabilidad.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
 </div>
@@ -118,25 +120,26 @@
     <div class="card cardimg colorcard" style="width: 18rem;">
         <img src="../img/sillaredragon.png" class="card-img-top" alt="silla">
         <div class="card-body">
-            <h5 class="card-title">Silla gamer</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <h5 class="card-title">Silla Gamer</h5>
+            <p class="card-text">Asiento ajustable en altura y ángulo, relleno de esponja sintética de máxima calidad, que no se deforma con el paso del tiempo.
+                Estructura de acero para garantizar su máxima durabilidad.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/sillaescritorio.png" class="card-img-top " alt="silla">
         <div class="card-body">
-            <h5 class="card-title">Silla gamer</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <h5 class="card-title">Silla </h5>
+            <p class="card-text">Un sillón diferente e ideal no solo para usar en oficinas sino también en tu hogar.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
     <div class="card colorcard" style="width: 18rem;">
         <img src="../img/silladeoficina.png" class="card-img-top" alt="silla">
         <div class="card-body">
             <h5 class="card-title">Silla de oficina</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">COMPRAR</a>
+            <p class="card-text">Un sillón diferente e ideal no solo para usar en oficinas sino también en tu hogar. Íntegramente construido en acero.</p>
+            <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
     </div>
 </div>
@@ -164,7 +167,7 @@
                 <a href="./privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
             </div>
             <div class="mb-2">
-                <a href="./reclamos-dudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
+                <a href="./reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-3">
