--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -231,7 +231,7 @@
                         <a href="./privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
                     </div>
                     <div class="mb-2">
-                        <a href="./reclamos-dudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
+                        <a href="./reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
