--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -216,6 +216,7 @@
     <!-- footer -->
     
     <footer>
+        <a href="#"><img src="../img/wsp.png" alt="wsp" class="wsp"></a>
         <div class="container-fluid">
             <div class="row p-5 fondoheaderandfooter text-white">
                 <div class="col-xs-12 col-md-6 col-lg-3">
